--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker build -t rohitmahindrakar/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run rohitmahindrakar/react-test npm test -- --coverage
+  - docker run -e CI=true rohitmahindrakar/react-test npm test -- --coverage
 
 after_success:
   - docker build -t rohitmahindrakar/multi-client ./client
