--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,15 @@ after_success:
   - docker push rohitmahindrakar/multi-nginx
   - docker push rohitmahindrakar/multi-server
   - docker push rohitmahindrakar/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker-POC'
+  env: 'Multidockerpoc-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-574771545529'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
